--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,6 @@
 [build]
   command = "npm run build"
-  publish = "out"
+  functions = "out_functions/"
+
+[[plugins]]
+  package = "@netlify/plugin-nextjs"
