--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "xss": "^1.0.14"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^4.41.3",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
